<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".PuntajeActivity">

    <TextView
        android:id="@+id/txtScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/puntos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"
        android:textColor="@color/purp"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/txtUserScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/txtScore"
        android:text="@string/usuario"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_bias="0.05"
        android:textColor="@color/purp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/txtNumberScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/txtUserScore"
        android:text="@string/puntosActuales"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_bias="0.05"
        android:textColor="@color/purp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/txtAccuScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/txtNumberScore"
        android:text="@string/puntosacumulados"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_bias="0.05"
        android:textColor="@color/purp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textAlignment="center" />

</androidx.constraintlayout.widget.ConstraintLayout>